--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,13 +1,12 @@
 {
     "compilerOptions": {
         "strict": true,  
-        "experimentalDecorators": true,
         "module": "CommonJS",
         "target": "ESNext",
         "outDir": "../dist",
-        "declaration": true
-    }, "files": [
-        "index.ts"
-    ],
-    
+        "declaration": true,
+        "downlevelIteration": true
+    }, "include": [
+        "./**/*.ts"
+    ]
 }
