--- a/package.json
+++ b/package.json
@@ -16,16 +16,14 @@
     "url": "https://github.com/sinclairzx81/threadbox"
   },
   "scripts": {
-    "build": "smoke-task build",
-    "build-doc": "smoke-task build_doc",
-    "test": "smoke-task test",
-    "start": "smoke-task watch"
+    "clean": "hammer task clean",
+    "build": "hammer task build",
+    "start": "hammer task example"
   },
   "devDependencies": {
+    "@sinclair/hammer": "^0.16.4",
     "@types/node": "^12.12.6",
-    "smoke-run": "^1.1.0",
-    "smoke-task": "^1.1.2",
-    "typescript": "^4.1.2",
+    "typescript": "^4.7.4",
     "typescript-bundle": "^1.0.16"
   }
 }
