--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
     "compilerOptions": {
         "strict": true,
-        "target": "ES2020",
+        "target": "ESNext",
         "module": "CommonJS",
-        "experimentalDecorators": true,
-        "downlevelIteration": true,
         "baseUrl": ".",
         "paths": {
             "@sinclair/threadbox": ["src/index.ts"]
